--- a/assets/styles.css
+++ b/assets/styles.css
@@ -48,13 +48,14 @@ a {
 }
 
 #drop-area {
+    
     width: 550px;
     height: 350px;
     padding: 20px;
     background: #c3a6a0;
     text-align: center;
     border-radius: 20px;
-    margin-left: 100px; 
+    margin-left: 30%; 
 
 }
 
@@ -160,24 +161,27 @@ a {
 }
 
 .card .description {
-    height: 250px;
+    height: 265px;
     padding: 90px 30px 30px 50px;
     border-bottom: solid 1px #c3a6a0;
 }
 
 .card .description h3 {
     color: #262220;
-    padding-left: 30px;
+    text-align: center;
+    line-height: 1.5em;
 }
 
 .card .description h4 {
     color: #262220;
-    padding-left: 30px;
+    text-align: center;
 }
 
 .card .description p {
     margin-top: 20px;
     font-size: 15px;
+    line-height: 1.5em;
+    text-align: justify;
 }
 
 .card .contact {
@@ -189,7 +193,6 @@ a {
 
 .card .contact a {
     text-decoration: none;
-
     padding: 5px 20px;
     border-radius: 5px;
 }
